test/setup.ts
// This file is used to set up the test environment
// Add any global test setup here

// Example: Set up any global variables or mocks
global.console = {
  ...console,
  // Uncomment to suppress console output during tests
  // log: jest.fn(),
  // debug: jest.fn(),
  // info: jest.fn(),
  // warn: jest.fn(),
  // error: jest.fn(),
};
